--- a/index.html
+++ b/index.html
@@ -26,27 +26,9 @@
 </nav>
 <!-- slide de fotos -->
 
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/r.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/i.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/a.jpg" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+<div class="alert alert-info text-center" role="alert">
+	A minha primeira página em Bootstrap
+</div> 
 
 <!-- divisão da página -->
 
@@ -54,17 +36,17 @@
   <div class="row">
     <div class="col-sm">
       
-      <img src="img/prog.jpg" alt="Ria de Aveiro" title="Imagem da Ria da minha cidade" class="img-fluid rounded">
+      <img src="img/a.jpg" alt="Ria de Aveiro" title="Imagem da Ria da minha cidade" class="img-fluid rounded">
       <p> TEXTO</p>
 
     </div>
 
     <div class="col-sm">
-      <img src="img/prog.jpg" alt="Ria de Aveiro" title="Imagem da Ria da minha cidade" class="img-fluid rounded-circle">
+      <img src="img/i.jpg" alt="Ria de Aveiro" title="Imagem da Ria da minha cidade" class="img-fluid rounded-circle">
       <p> TEXTO</p>
     </div>
     <div class="col-sm">
-      <img src="img/prog.jpg" alt="Ria de Aveiro" title="Imagem da Ria da minha cidade" class="img-fluid rounded-pill">
+      <img src="img/r.jpg" alt="Ria de Aveiro" title="Imagem da Ria da minha cidade" class="img-fluid rounded-pill">
       <p> TEXTO</p>
     </div>
   </div>
