--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
     <div class="col-sm">
       
       <img src="img/a.jpg" alt="Ria de Aveiro" title="Imagem da Ria da minha cidade" class="img-fluid rounded">
-      <p> TEXTO</p>
+      <p> Ria de Aveiro</p>
 
     </div>
 
     <div class="col-sm">
       <img src="img/i.jpg" alt="Ria de Aveiro" title="Imagem da Ria da minha cidade" class="img-fluid rounded-circle">
-      <p> TEXTO</p>
+      <p> Ria de Aveiro</p>
     </div>
     <div class="col-sm">
       <img src="img/r.jpg" alt="Ria de Aveiro" title="Imagem da Ria da minha cidade" class="img-fluid rounded-pill">
-      <p> TEXTO</p>
+      <p> Ria de Aveiro</p>
     </div>
   </div>
 </div>
