--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <!--<span class="text-muted">Menu dinâmico</span>-->
       <a href="#" title="" class="btn btn-info"> Inicio </a>   
       <a href="pg/preço.html" title="Preço das Férias" class="btn btn-info"> Preços </a>
-
+    </div>
+  </div>
+</div>      
 <!-- MENU -->
 <nav class="nav">
 <ul class="nav">
