--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
       <!--<span class="text-muted">Menu dinâmico</span>-->
       <a href="#" title="" class="btn btn-info"> Inicio </a>   
       <a href="pg/preço.html" title="Preço das Férias" class="btn btn-info"> Preços </a>
-    </div>
+   </div>
   </div>
+  <nav class="navbar navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#batatas" aria-controls="batatas" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </nav>
 </div>
-
 <!-- Carrousel de fotos-->
 <div align="center">
 	<div class="w-55 p-3"> <!-- w -25% 50% 75% 100% -->
