--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="bg-dark p-4">
       <h5 class="text-white h4">Desing Multimédia</h5>
       <!--<span class="text-muted">Menu dinâmico</span>-->
-      <a href="#" title="" class="btn btn-info"> Inicio </a>   
+      <a href="#" title="Inicio" class="btn btn-info"> Inicio </a>   
       <a href="pg/preço.html" title="Preço das Férias" class="btn btn-info"> Preços </a>
-   </div>
+    </div>
   </div>
   <nav class="navbar navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#batatas" aria-controls="batatas" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,6 +28,7 @@
     </button>
   </nav>
 </div>
+
 <!-- Carrousel de fotos-->
 <div align="center">
 	<div class="w-55 p-3"> <!-- w -25% 50% 75% 100% -->
