--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="collapse" id="batatas">
     <div class="bg-dark p-4">
       <h5 class="text-white h4">Desing Multimédia</h5>
-      <!--<span class="text-muted">Menu dinâmico</span>-->
+      	<!--<span class="text-muted">Menu dinâmico</span>-->
       <a href="#" title="Inicio" class="btn btn-info"> Inicio </a>   
       <a href="pg/preço.html" title="Preço das Férias" class="btn btn-info"> Preços </a>
     </div>
@@ -27,11 +27,11 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   </nav>
-</div>
+</div> 
 
 <!-- Carrousel de fotos-->
 <div align="center">
-	<div class="w-55 p-3"> <!-- w -25% 50% 75% 100% -->
+	<div class="w-55 p-3"> <!-- w - 25% 50% 75% 100% -->
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 		  <ol class="carousel-indicators">
 		    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
