--- a/pg/preço.html
+++ b/pg/preço.html
@@ -19,6 +19,7 @@
       <!--<span class="text-muted">Menu dinâmico</span>-->
       <a href="../index.html" title="Inicio" class="btn btn-info"> Inicio </a>   
       <a href="pg/preço.html" title="Preço das Férias" class="btn btn-info"> Preços </a>
+      <a href="pg/Stuff.html" title="Estadia" class="btn btn-info"> Estadia </a>
     </div>
   </div>
   <nav class="navbar navbar-dark bg-dark">
