--- a/pg/Stuff.html
+++ b/pg/Stuff.html
@@ -19,7 +19,7 @@
       <h5 class="text-white h4">Desing Multimédia</h5>
       	<!--<span class="text-muted">Menu dinâmico</span>-->
       <a href="../index.html" title="Inicio" class="btn btn-info"> Inicio </a>   
-      <a href="pg/preço.html" title="Preço das Férias" class="btn btn-info"> Preços </a>
+      <a href="preço.html" title="Preço das Férias" class="btn btn-info"> Preços </a>
       <a href="#!" title="Estadia" class="btn btn-info"> Estadia </a>
     </div>
   </div>
