--- a/pg/preço.html
+++ b/pg/preço.html
@@ -18,8 +18,8 @@
       <h5 class="text-white h4">Desing Multimédia</h5>
       <!--<span class="text-muted">Menu dinâmico</span>-->
       <a href="../index.html" title="Inicio" class="btn btn-info"> Inicio </a>   
-      <a href="pg/preço.html" title="Preço das Férias" class="btn btn-info"> Preços </a>
-      <a href="pg/Stuff.html" title="Estadia" class="btn btn-info"> Estadia </a>
+      <a href="preço.html" title="Preço das Férias" class="btn btn-info"> Preços </a>
+      <a href="Stuff.html" title="Estadia" class="btn btn-info"> Estadia </a>
     </div>
   </div>
   <nav class="navbar navbar-dark bg-dark">
@@ -178,3 +178,15 @@
 <script src="../Bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
