--- a/pg/preço.html
+++ b/pg/preço.html
@@ -132,8 +132,11 @@
 				<div class="card border-secondary mb-3" style="max-width: 18rem;">
 				  		<div class="card-header">Header</div>
 				  <div class="card-body text-secondary">
-				    <h5 class="card-title">São Jacinto</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <h5 class="card-title">Campo</h5>
+				    <p class="card-text"> Férias de Autocarro: <b> <span id="CA"></span>€</b></p>
+				    <p class="card-text"> Férias de Carro: <b> <span id="CC"></span>€</b></p>
+				    <p class="card-text"> Férias de Avião: <b> <span id="CV"></span>€</b></p>
+				    <p class="card-text"><!--   texo de descrição    --></p>
 				  </div>
 				</div>
 		    </div>
@@ -145,8 +148,11 @@
 		      <div class="card border-secondary mb-3" style="max-width: 18rem;">
 				  		<div class="card-header">Header</div>
 				  <div class="card-body text-secondary">
-				    <h5 class="card-title">Costa Nova</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <h5 class="card-title">Praia</h5>
+				    <p class="card-text"> Férias de Autocarro: <b> <span id="PA"></span>€</b></p>
+				    <p class="card-text"> Férias de Carro: <b> <span id="PC"></span>€</b></p>
+				    <p class="card-text"> Férias de Avião: <b> <span id="PV"></span>€</b></p>
+				    <p class="card-text"> <!--   texo de descrição   --></p>
 				  </div>
 				</div>
 		    </div>
@@ -158,8 +164,11 @@
 		      <div class="card border-secondary mb-3" style="max-width: 18rem;">
 				  		<div class="card-header">Header</div>
 				  <div class="card-body text-secondary">
-				    <h5 class="card-title">Ricardo Sérgio</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <h5 class="card-title">Ilhas</h5>
+				    <p class="card-text"> Férias de Autocarro: <b> <span id="IA"></span>€</b></p>
+				    <p class="card-text"> Férias de Carro: <b> <span id="IC"></span>€</b></p>
+				    <p class="card-text"> Férias de Avião: <b> <span id="IV"></span>€</b></p>
+				    <p class="card-text"><!--   texo de descrição    --></p>
 				  </div>
 				</div>
 			</div>
@@ -173,7 +182,8 @@
 
 </footer>
 
-<script src="../Bootstrap/js/jquery-3.3.1.slim.min.js"></script>
+<script src="jquery-3.4.1.min.js"></script>
+<script src="API_JSON.js"></script>
 <script src="../Bootstrap/js/popper.min.js"></script>
 <script src="../Bootstrap/js/bootstrap.min.js"></script>
 </body>
