--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <a href="#" title="Inicio" class="btn btn-info"> Inicio </a>   
       <a href="pg/preço.html" title="Preço das Férias" class="btn btn-info"> Preços </a>
       <a href="pg/Stuff.html" title="Estadia" class="btn btn-info"> Estadia </a>
-    </div>
+      <a href="pg/script.html" title="JavaScript" class="btn btn-info">JavaScript </a>
+    </div> 
   </div>
   <nav class="navbar navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#batatas" aria-controls="batatas" aria-expanded="false" aria-label="Toggle navigation">
